Добавил возможность выбора изображений из галереи с их сохранением в кэше для каждого маркера

--- a/package.json
+++ b/package.json
@@ -40,7 +40,9 @@
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
     "react-native-maps": "1.18.0",
-    "expo-image-picker": "~16.0.4"
+    "expo-image-picker": "~16.0.4",
+    "expo-image": "~2.0.4",
+    "expo-file-system": "~18.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
